--- a/education.html
+++ b/education.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 
 <head>
-  <title>John Doe | Education</title>
+  <title>Yash Sharma | Education</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords"
@@ -16,7 +16,7 @@
   <meta name="AdsBot-Google" content="index,follow" />
 
   <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/education.html">
-  <meta property="og:title" content="John Doe | Education">
+  <meta property="og:title" content="Yash Sharma | Education">
   <meta property="og:description"
     content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
   <meta property="og:type" content="website">
@@ -24,8 +24,8 @@
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/education.html">
 
-  <meta name="application-name" content="John Doe | Education" />
-  <meta name="apple-mobile-web-app-title" content="John Doe | Education" />
+  <meta name="application-name" content="Yash Sharma | Education" />
+  <meta name="apple-mobile-web-app-title" content="Yash Sharma | Education" />
   <meta name="summary"
     content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
@@ -296,69 +296,51 @@
       <h1 class="head" data-aos="fade-up" data-aos-delay="300">Education</h1>
     </div>
       <!-- CARDS -->
-      <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
-        <div class="row">
-          <div class="col-xl-6 col-md-6 col-sm-12">
-            <img src="assets/images/education-page/education.png" alt="education.png">
-          </div>
-          <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-            <h4>Post Graduation</h4>
-            <div class="qual">
-            <h6><em>Massachusetts institute of technology</em></h6>
-            <h6><em>M.Tech Computer Science</em></h6>
-            <h6><em>2021-2023</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
-            <p>An investment in knowledge always pays the best interest.</p>
-          </div>
-        </div>
-      </div>
       <div class="card mb-5" data-aos="fade-right" data-aos-delay="500">
         <div class="row">
-          <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-            <img src="assets/images/education-page/education.png" alt="education.png">
+          <div class="col-xl-6 col-md-6 col-sm-12">
+            <img src="assets/images/education-page/iitp.png" alt="education.png">
           </div>
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
             <h4>Graduation</h4>
             <div class="qual">
-              <h6><em>Massachusetts institute of technology</em></h6>
-              <h6><em>B.Tech Computer Science</em></h6>
-              <h6><em>2017-2021</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
-            <p>
-              An investment in knowledge always pays the best interest.
-            </p>
+            <h6><em>Indian Institute of Technology Patna</em></h6>
+            <h6><em>B.Tech Computer Science</em></h6>
+            <h6><em>2019-2023</em></h6></div>
+            <p>CPI: 9.04</p>
+            <p><i>Activities - </i> Cricket, Chess, Competitive Programming</p>
           </div>
         </div>
       </div>
       <div class="card mb-5" data-aos="fade-left" data-aos-delay="500">
         <div class="row">
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-            <img src="assets/images/education-page/education.png" alt="education.png">
+            <img src="assets/images/education-page/boston.jpg" alt="education.png">
           </div>
           <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-            <h4>High School</h4>
+            <h4>Intermediate</h4>
             <div class="qual">
-              <h6><em>Delhi Public School</em></h6>
-              <h6><em>High School</em></h6>
-              <h6><em>2015-2017</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
-            <p>An investment in knowledge always pays the best interest.</p>
+              <h6><em>Boston Public School</em></h6>
+              <h6><em>Science Stream</em></h6>
+              <h6><em>2017-2019</em></h6></div>
+              <p>Percentage: 95.4%</p>
+            <p><i>Activities-</i> Sports, House Captain, Tech Society</p>
         </div>
       </div>
     </div>
     <div class="card mb-5" data-aos="fade-right" data-aos-delay="500">
       <div class="row">
         <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-          <img src="assets/images/education-page/education.png" alt="education.png">
+          <img src="assets/images/education-page/conrads.png" alt="education.png">
         </div>
         <div class="col-xl-6 col-md-6 col-sm-12 p-5">
-          <h4>Elementary School</h4>
+          <h4>High School</h4>
           <div class="qual">
-            <h6><em>Joyride</em></h6>
-            <h6><em>Pre-Primary</em></h6>
-            <h6><em>2002-2015</em></h6></div>
-            <p><i>Activities-</i> Sports, House Captain, Debate Club, Tech Society</p>
-          <p>An investment in knowledge always pays the best interest.</p>
+            <h6><em>St. Conrad's Inter College</em></h6>
+            <!-- <h6><em>Pre-Primary</em></h6> -->
+            <h6><em>2007-2017</em></h6></div>
+            <p>Percentage: 97.6%</p>
+            <p><i>Activities-</i> Sports, House Captain, Tech Society</p>
       </div>
     </div>
   </div>
