--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-theme="light">
 
 <head>
-    <title>John Doe | Home</title>
+    <title>Yash Sharma | Home</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords"
@@ -14,15 +14,15 @@
     <meta name="Googlebot" content="index,follow" />
     <meta name="AdsBot-Google" content="index,follow" />
     <meta property="og:site_name" content="https://portfolio.smaranjitghose.codes/">
-    <meta property="og:title" content="John Doe | Home">
+    <meta property="og:title" content="Yash Sharma | Home">
     <meta property="og:description"
         content="This project serves free and beautiful portfolio template for everyone. Anyone can showcase their work including moocs, education, projects, experience,etc. to the world.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://portfolio.smaranjitghose.codes/">
     <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="https://portfolio.smaranjitghose.codes/">
-    <meta name="application-name" content="John Doe | Home" />
-    <meta name="apple-mobile-web-app-title" content="John Doe | Home" />
+    <meta name="application-name" content="Yash Sharma | Home" />
+    <meta name="apple-mobile-web-app-title" content="Yash Sharma | Home" />
     <meta name="summary"
         content="An open source project aimed at providing free and beautiful templates to everyone for building their portfolio websites and showcase their work to the world." />
     <!--For Dark/Light mode Toggle-->
@@ -87,19 +87,19 @@
     </div>
 <center>
     <!-- Home Section -->
-    <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">John Doe</span>
+    <div class="text col-sm-6">Hi <span class="wave">👋</span>,I'm <span class="header">Yash Sharma</span>
         <div class="center">
             <div>
-                <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                <img src="assets/images/Profile Picture.jpg" alt="" class="rounded-circle" height="200" width="200">
             </div>
             <br/>
             <span style="display: inline;" >I am into <span class="animated-text"
-                data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                data-words="Competitive Programming, Web Development, App Development, Open Source, Mentoring, Astronomy, Sports"></span>
             </span>
             <div>
                 <div class="social-icons">
 
-                    <a class="socialicon twitter" href="" target="_blank" rel="author">
+                    <a class="socialicon twitter" href="https://twitter.com/mr__yasharma" target="_blank" rel="author">
                         <!-- SVG code for twitter icon -->
                         <svg class="twitter-icon" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 500 500" enable-background="new 0 0 500 500"
@@ -157,7 +157,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon dribbble" href="" target="_blank" rel="author">
+                    <!-- <a class="socialicon dribbble" href="" target="_blank" rel="author">
                         <svg class="dribbble-icon" viewBox="0 0 256 256" version="1.1"
                         xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMidYMid">
                         <g>
@@ -166,9 +166,9 @@
                                 fill="#B2215A" y="0"></path>
                         </g>
                         </svg>
-                    </a>
+                    </a> -->
 
-                    <a class="socialicon linkedin" href="" target="_blank" rel="author">
+                    <a class="socialicon linkedin" href="https://www.linkedin.com/in/yashsharma8415/" target="_blank" rel="author">
                         <svg class="linkedin-icon" xmlns="http://www.w3.org/2000/svg" width="35" viewBox="0 0 24 24" fill="#0e76a8"
                             stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="feather feather-linkedin">
                             <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -177,11 +177,11 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon medium" href="" target="_blank" rel="author">
+                    <a class="socialicon medium" href="https://medium.com/@Messier22" target="_blank" rel="author">
                         <i class="fab fa-medium-m"></i>
                     </a>
 
-                    <a class="socialicon codeforces" href="" target="_blank" rel="author">
+                    <a class="socialicon codeforces" href="https://codeforces.com/profile/Protostar" target="_blank" rel="author">
                         <svg class="codeforces-icon" xmlns="http://www.w3.org/2000/svg" viewBox="5 0 14 19" width="100" height="100">
                             <g>
                                 <rect class="red" x="15" width="2" height="6.5" rx="0.7" y="0" fill="#AE0F0A" />
@@ -191,11 +191,11 @@
                         </svg>
                     </a>
                     
-                    <a class="socialicon kaggle" href="" target="_blank" rel="author">
+                    <!-- <a class="socialicon kaggle" href="" target="_blank" rel="author">
                         <i class="fab fa-kaggle"></i>
-                    </a>
+                    </a> -->
 
-                    <a class="socialicon instagram" href="" target="_blank" rel="author">
+                    <a class="socialicon instagram" href="https://www.instagram.com/mr__yasharma/" target="_blank" rel="author">
                         <!-- svg code for instagram icon -->
                         <svg class="instagram-icon" x="0px" y="0px" viewBox="0 0 202.5 202.5" style="enable-background:new 0 0 202.5 202.5;">
                             <circle id="littleCircle" class="st0" cx="101" cy="101.5" r="18.9" />
@@ -206,7 +206,7 @@
                         </svg>
                     </a>
 
-                    <a class="socialicon github" href="" target="_blank" rel="author">
+                    <a class="socialicon github" href="https://github.com/yashsharma8415" target="_blank" rel="author">
                         <!-- SVG code for Github icon -->
                         <svg class="github-icon" width="45px" height="45px" viewBox="0 0 300 300">
                             <!-- body -->
