Add form response

--- a/index.html
+++ b/index.html
@@ -224,6 +224,20 @@
             </div>
         </div>
     </div>
+
+    <div>
+        <form
+          name="contact"
+          method="POST"
+          data-netlify="true"
+          style="display: none"
+        >
+          <input type="text" name="name" placeholder="Your Name" />
+          <input type="email" name="email" placeholder="Email Address" />
+          <textarea name="message" placeholder="Type your Message"></textarea>
+          <input type="submit" value="Send" />
+        </form>
+      </div>
 </center>
     
     
